# diqu-email

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml
diqu/alerts/: sendgrid.py
example/: profiles.yml
example/data/: csv__data.csv
